* Minor update: (241214)
- add [MySQL9, DotNETSDK9, Apache84] to the ALPHA list.
- package: set QTS 5.1.9 as max version.

* Minor update: (240922)
- package: set QTS 5.1.8 as max version.

* Minor update: (240801)
- code: improve message format, update actions for compatibility with sherpa, general code refresh.

* Minor update: (240601)
- add [qBitorrent2, Kapowarr82, Kapowarr83, Codex83] to the OMEGA list.

* Minor update: (240512)
- code: sort faster.

* Minor update: (240511)
- add [QJDK21] to the ALPHA list.
- add [SortMyQPKGs] to the OMEGA list.
- ensure line spacing between config blocks.
- and a few code upgrades.

* Minor update: (240427)
- add [NodeJS16, NodeJS22] to the ALPHA list.

* Minor update: (240225)
- add [QPython312] to the ALPHA list.
- add various QPKGs to the OMEGA list:
- OSonarr
- OLidarr
- Readarr81
- Readarr82
- Readarr83
- OReadarr
- Prowlarr81
- Prowlarr82
- Prowlarr83
- OTautulli
- code: minor comment updates.

* Minor update: (240112)
- add various QPKGs to the OMEGA list:
- SABnzbd83
- qBittorrent
- SonarrV481
- SonarrV482
- SonarrV483
- RadarrDotNet81
- RadarrDotNet82
- Bazarr81
- Bazarr82
- Bazarr83
- SickChill83
- Medusa82
- Medusa83
- Mylar382
- LidarrDotNET81
- LidarrDotNET82

* Minor update: (231118)
- add [NodeJS20, DotNETSDK8, Apache83, PostgreSQL15, PostgreSQL16] to the ALPHA list.
- add [RadarrDotNet83, LidarrDotNET83] to the OMEGA list.

* Minor update: (230928)
- add [sHTTPs] to the ALPHA list.
- add [SABnzbd81, SABnzbd82] to the OMEGA list.

* Minor update: (230820)
- add [V2Ray, QPython311] to the ALPHA list.

* Minor update: (230718)
- add [IncreaseTimeouts, PG4admin82] to the ALPHA list.
- add [OqBittorrent] to the OMEGA list.

* Minor update: (230503)
- code: add 'status' action.

* Minor update: (230227)
- code: update package icon.

* Minor update: (230131)
- code: always touch backupfile when running a backup: even when nothing is backed-up.

* Minor update: (230112)