@@ -4,7 +4,7 @@ echo -n 'checking ... '
 
 fail=false
 
-if ! shellcheck --shell=bash --exclude=1117,2013,2018,2019,2120,2034,2119,2155,2181 ./shared/*.sh; then
+if ! shellcheck --shell=bash --exclude=1117,2013,2018,2019,2120,2034,2086,2119,2155,2181 ./shared/*.sh; then
     fail=true
     echo
 fi
